ajout des like et commentaire et modification au niveau des filtre pour la recherche

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -362,6 +362,18 @@
 
           <p id="profile-feedback" class="feedback" role="status"></p>
         </section>
+
+        <section class="card liked-card" data-animate>
+          <div class="liked-card__header">
+            <h3>Vos avis aimés</h3>
+            <span id="liked-reviews-count" class="badge">0</span>
+          </div>
+          <p class="subtitle">
+            Retrouvez en un clin d'œil les publications que vous avez appréciées.
+          </p>
+          <ul id="liked-reviews-list" class="reviews reviews--compact"></ul>
+          <p id="liked-reviews-feedback" class="feedback" role="status"></p>
+        </section>
       </section>
 
       <!-- Public profile view -->
