amélioration de la partie profile

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -363,6 +363,18 @@
           <p id="profile-feedback" class="feedback" role="status"></p>
         </section>
 
+        <section class="card posted-card" data-animate>
+          <div class="liked-card__header">
+            <h3>Vos avis publiés</h3>
+            <span id="posted-reviews-count" class="badge">0</span>
+          </div>
+          <p class="subtitle">
+            Consultez rapidement les expériences que vous avez partagées.
+          </p>
+          <ul id="posted-reviews-list" class="reviews reviews--compact"></ul>
+          <p id="posted-reviews-feedback" class="feedback" role="status"></p>
+        </section>
+
         <section class="card liked-card" data-animate>
           <div class="liked-card__header">
             <h3>Vos avis aimés</h3>
